--- a/Audio_Preprocessing_Pipeline.ipynb
+++ b/Audio_Preprocessing_Pipeline.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMUQtJ5FJYfXwtr82VTQ47V",
+      "authorship_tag": "ABX9TyPquvbLTubFga+WlVMG0RJT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
         "id": "eKyowtAjo6S2",
         "outputId": "d96d8619-4902-437d-fff8-fd2425218046"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         "id": "f4L7hHz8uogo",
         "outputId": "be878321-b6c7-4159-f5ed-4e3500774c13"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,7 +226,7 @@
       "metadata": {
         "id": "OFgqwtono_iQ"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "id": "S4VTiESZqq42",
         "outputId": "7697d229-e1e3-4e21-9296-1ab90875d9b4"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +288,7 @@
         "id": "g-2ISvNgquyn",
         "outputId": "57627f5a-edf5-4bc3-af0f-64fedd063973"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,7 +362,7 @@
         "id": "g_aBU7xbtbnk",
         "outputId": "9c12a4c1-31bb-421d-d359-b8a79389ddc1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -399,7 +399,7 @@
         "id": "v-nUrwuJtfkK",
         "outputId": "d80dac95-372b-42ef-b9d9-a387127e7d18"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -437,7 +437,7 @@
         "id": "DqlaCdQOpFRt",
         "outputId": "f3a326d2-fb2d-46a3-c17e-6aaebb3cde3b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -467,7 +467,7 @@
         "id": "D-h1U3SqtzR4",
         "outputId": "e947eda6-c32e-4e1d-9d39-1c627e7ff986"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -484,13 +484,184 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Conclusion\n",
+        "## Preprocessing Conclusion\n",
         "\n",
         "In this project, an audio preprocessing pipeline was successfully implemented using a subset of the LibriSpeech dataset. Raw speech audio files were loaded and preprocessed using normalization and silence removal techniques. The difference between unprocessed and preprocessed audio was demonstrated through audio playback and waveform visualization. Spectrogram and MFCC visualizations provided insights into the frequency and feature-level representation of speech signals. The preprocessing pipeline prepares the audio data for further speech analysis and machine learning applications.\n",
         "\n"
       ],
       "metadata": {
         "id": "uCM9E5Q4t22j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Modelling\n",
+        "## Objective of Modelling\n",
+        "The objective of this stage is to apply Automatic Speech Recognition (ASR) models on preprocessed audio data and compare different ASR approaches. Based on the comparison, the most suitable model is selected for the final pipeline.\n"
+      ],
+      "metadata": {
+        "id": "4-sN2Fqt4Yl1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Introduction to Automatic Speech Recognition (ASR)\n",
+        "\n",
+        "Automatic Speech Recognition (ASR) is a technology that converts spoken audio into written text. In audio-based machine learning systems, ASR models are applied after preprocessing to extract meaningful textual information from speech signals.\n"
+      ],
+      "metadata": {
+        "id": "SfZezVeR6N1-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ASR Models Considered\n",
+        "\n",
+        "### Kaldi ASR\n",
+        "Kaldi is a research-oriented ASR toolkit that provides extensive control over acoustic and language models. However, it requires complex setup, detailed configuration, and expert knowledge, making it unsuitable for quick implementation in this project.\n",
+        "\n",
+        "### Hugging Face ASR Models\n",
+        "Hugging Face provides transformer-based ASR models such as Wav2Vec 2.0. These models achieve high accuracy but require more dependencies, higher computational resources, and careful configuration.\n",
+        "\n",
+        "### Whisper ASR\n",
+        "Whisper is a pre-trained, end-to-end ASR model developed by OpenAI. It is robust to noisy audio, requires minimal preprocessing, and is easy to integrate, making it suitable for real-world speech recognition tasks.\n"
+      ],
+      "metadata": {
+        "id": "f5uKLYsc6oLC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Modelling Strategy\n",
+        "\n",
+        "To perform ASR modelling and comparison, one non-Whisper ASR model and the Whisper ASR model are applied to the same preprocessed audio. The outputs are compared based on ease of use and robustness, and the most suitable model is selected.\n"
+      ],
+      "metadata": {
+        "id": "EU_qvTrl6w_H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install transformers torchaudio\n"
+      ],
+      "metadata": {
+        "id": "8TkwDw5D61YI",
+        "outputId": "31e19225-b8c4-4a97-e380-41774d622539",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: transformers in /usr/local/lib/python3.12/dist-packages (4.57.3)\n",
+            "Requirement already satisfied: torchaudio in /usr/local/lib/python3.12/dist-packages (2.9.0+cpu)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from transformers) (3.20.0)\n",
+            "Requirement already satisfied: huggingface-hub<1.0,>=0.34.0 in /usr/local/lib/python3.12/dist-packages (from transformers) (0.36.0)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.12/dist-packages (from transformers) (2.0.2)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.12/dist-packages (from transformers) (25.0)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.12/dist-packages (from transformers) (6.0.3)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.12/dist-packages (from transformers) (2025.11.3)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.12/dist-packages (from transformers) (2.32.4)\n",
+            "Requirement already satisfied: tokenizers<=0.23.0,>=0.22.0 in /usr/local/lib/python3.12/dist-packages (from transformers) (0.22.1)\n",
+            "Requirement already satisfied: safetensors>=0.4.3 in /usr/local/lib/python3.12/dist-packages (from transformers) (0.7.0)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.12/dist-packages (from transformers) (4.67.1)\n",
+            "Requirement already satisfied: torch==2.9.0 in /usr/local/lib/python3.12/dist-packages (from torchaudio) (2.9.0+cpu)\n",
+            "Requirement already satisfied: typing-extensions>=4.10.0 in /usr/local/lib/python3.12/dist-packages (from torch==2.9.0->torchaudio) (4.15.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.12/dist-packages (from torch==2.9.0->torchaudio) (75.2.0)\n",
+            "Requirement already satisfied: sympy>=1.13.3 in /usr/local/lib/python3.12/dist-packages (from torch==2.9.0->torchaudio) (1.14.0)\n",
+            "Requirement already satisfied: networkx>=2.5.1 in /usr/local/lib/python3.12/dist-packages (from torch==2.9.0->torchaudio) (3.6.1)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.12/dist-packages (from torch==2.9.0->torchaudio) (3.1.6)\n",
+            "Requirement already satisfied: fsspec>=0.8.5 in /usr/local/lib/python3.12/dist-packages (from torch==2.9.0->torchaudio) (2025.3.0)\n",
+            "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub<1.0,>=0.34.0->transformers) (1.2.0)\n",
+            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests->transformers) (3.4.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests->transformers) (3.11)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests->transformers) (2.5.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests->transformers) (2025.11.12)\n",
+            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.12/dist-packages (from sympy>=1.13.3->torch==2.9.0->torchaudio) (1.3.0)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.12/dist-packages (from jinja2->torch==2.9.0->torchaudio) (3.0.3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import pipeline\n",
+        "\n",
+        "hf_asr = pipeline(\n",
+        "    \"automatic-speech-recognition\",\n",
+        "    model=\"facebook/wav2vec2-base-960h\"\n",
+        ")\n",
+        "\n",
+        "hf_result = hf_asr(\"preprocessed_audio/audio_0.wav\")\n",
+        "\n",
+        "print(\"Hugging Face ASR Output:\")\n",
+        "print(hf_result[\"text\"])\n"
+      ],
+      "metadata": {
+        "id": "unvrMjKj63Hk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install openai-whisper\n"
+      ],
+      "metadata": {
+        "id": "0PKQ0Ar665Iu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import whisper\n",
+        "\n",
+        "whisper_model = whisper.load_model(\"small\")\n",
+        "\n",
+        "whisper_result = whisper_model.transcribe(\"preprocessed_audio/audio_0.wav\")\n",
+        "\n",
+        "print(\"Whisper ASR Output:\")\n",
+        "print(whisper_result[\"text\"])\n"
+      ],
+      "metadata": {
+        "id": "rgkLLOGN651g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Comparison of ASR Models\n",
+        "\n",
+        "Both Hugging Face Wav2Vec 2.0 and Whisper ASR models were applied to the same preprocessed audio. While the Hugging Face model provides accurate transcription, it requires additional dependencies and careful configuration. Whisper demonstrates better robustness to noisy audio and is easier to integrate. Based on these observations, Whisper is selected as the final ASR model.\n"
+      ],
+      "metadata": {
+        "id": "sMclkmxj68l0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Final Conclusion\n",
+        "\n",
+        "In this project, an end-to-end audio processing pipeline was developed starting from audio preprocessing to ASR modelling. After preprocessing the audio data, two ASR models were applied and compared. Based on robustness, ease of use, and performance on noisy speech, Whisper was selected as the final ASR model. This project demonstrates a complete and practical audio processing and speech recognition pipeline.\n"
+      ],
+      "metadata": {
+        "id": "o2ZJ0pOT6_Zx"
       }
     },
     {
